<resources>
    <string name="report_title">Testing report</string>
    <string name="report_all">Total(%1$d)items</string>
    <string name="report_pass">Pass(%1$d)items</string>
    <string name="report_fail">Fail(%1$d)items：%2$s</string>
    <string name="report_notest">Not test(%1$d)items：%2$s</string>
    <string name="exit_all_pass">Press BACK again to quit</string>
    <string name="exit_menu">Exit</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pass">pass</string>
    <string name="fail">fail</string>
    <string name="cancel">cancel</string>
    <string name="testing">testing...</string>
    <string name="initialize">initialize...</string>
    <string name="app_name">Factory test</string>
    <string name="start">start</string>
    <string name="scan">scan</string>
    <string name="scan_name">scan</string>
    <string name="scan_code">scan code</string>
    <string name="device_open_fail">device open fail!</string>
    <string name="service_get_fail">Service gain failure!</string>
    <string name="sensor_get_fail">Sensor acquisition failure!</string>
    <string name="sensor_register_fail">Sensor registration failure!</string>
    <string name="test_pass">pass-test</string>
    <string name="shake_hint">Please cover the light sensor with your hand at least two times.
    </string>
    <string name="shake">Please sloshing the equipment.</string>
    <string name="remove_headset">Please take off the headset</string>
    <string name="insert_headset">Please insert the headset</string>
    <string name="stop">stop</string>
    <string name="play">play</string>
    <string name="record">record</string>
    <string name="time_out">time out!</string>
    <string name="clean_state">Clear the current test state</string>
    <string name="uninstall">uninstall</string>
    <string name="lasttime_state">Look at the results of the last test</string>
    <string name="control_center_quit_confirm">Be sure to quit?</string>
    <string name="item1">Button backlight</string>
    <string name="fengmq">Buzzer</string>
    <string name="led_name">LED</string>
    <string name="led_tri_text">LED test sequence: red, green, blue</string>
    <string name="led_tri_text_SQ46">LED test order: red, green, blue, red</string>
    <string name="led_tri_text_SQ42T">LED test order: left red, green, blue, right red</string>
    <string name="led_tri_text_SQ26TB">LED test order: 1 red, 1 green, 4 blue, 2 red, 2 green, 3 red, 3 blue, 4 red.</string>
    <string name="led_tri_text_SQ27T">LED test order: 2 red, 2 blue, 3 white, 4 red, 1 red, 1 green.</string>
    <string name="led_tri_text_SQ27TC">LED test order: 1 red, 2 green, 3 orange, 4 yellow</string>
    <string name="led_dual_text">LED test order: red, green</string>
    <string name="led_sq274g_text">LED test order: green, red, blue, white, red</string>
    <string name="led_confirm">Whether the color of the LED lamp is correct?</string>
    <string name="led_text">LED test order: red, green</string>
    <string name="led_tri_text_SQ52">LED test sequence: blue，red，green（green on back）</string>
    <string name="led_tri_text_SQ53">LED test sequence: green, red, blue, red.</string>
    <string name="led_tri_text_SQ47">LED test sequence: green, red, yellow, red.</string>
    <string name="led_tri_text_SQ45">LED test sequence: green, red, blue.</string>
    <string name="led_tri_text_SQ45S">LED test sequence: green, red, blue, red, blue.</string>
    <string name="led_tri_text_SQ38">LED test sequence: green, red, red, green, red, green.</string>
    <string name="led_tri_text_SQ51FW">LED test sequence:  red, green, red, blue.</string>
    <string name="led_tri_text_SQ53c">LED test sequence:  green, red, red, blue.</string>
    <string name="led_tri_text_SQ51s">LED test sequence:  red, blue, green, red .</string>
    <string name="dual_led_name">Double color lamp</string>
    <string name="dual_led_text">LED test order: red, green</string>
    <string name="remove_plug">Please remove the charging device</string>
    <string name="flashlight_name">Flash lamp</string>
    <string name="flashlight_confirm">Whether the flash is bright or not?</string>
    <string name="keypadbacklight_name">Button backlight</string>
    <string name="keypadbacklight_confirm">Whether the backlight of the button is bright?</string>
    <string name="led_four_text">LED test order: blue, yellow, green, red + red, green.</string>
    <string name="FourLeds">Four Leds</string>
    <string name="fourled_confirm">Is the color of a four color lamp correct?</string>
    <string name="sim1_name">SIM1</string>
    <string name="cdma">CDMA card</string>
    <string name="wcdma">WCDMA card</string>
    <string name="ready">State: in preparation</string>
    <string name="fengmq_confirm">Is the buzzer normal?</string>
    <string name="gsm">GSM card</string>
    <string name="sim2_name">SIM2</string>
    <string name="nfc_name">NFC</string>
    <string name="touchpanel_edge_name">Touch screen</string>
    <string name="touchpanel_key_name">Touch key</string>
    <string name="keypad_name">Key</string>
    <string name="keypad_text">Please press the following button</string>
    <string name="keypad_volume_up">volume + </string>
    <string name="keypad_volume_down">volume - </string>
    <string name="media_next">Headset button + </string>
    <string name="media_previous">Headset button - </string>
    <string name="keypad_focus">focusing</string>
    <string name="keypad_camera">Take photos</string>
    <string name="keypad_home">home</string>
    <string name="keypad_menu">menu</string>
    <string name="keypad_app_switch">Recent App</string>
    <string name="keypad_back">back</string>
    <string name="keypad_power">power</string>
    <string name="keypad_search">search</string>
    <string name="keypad_custom">Customer-defined</string>
    <string name="keypad_sos">Emergency call</string>
    <string name="silent_on">silent on</string>
    <string name="silent_off">silent off</string>
    <string name="cameraback_name">Rear camera</string>
    <string name="cameraback_takepicture">Take photos</string>
    <string name="cameraback_fail_open">The camera failed to open, please check the camera installation is correct!
    </string>
    <string name="autofocus_fail">No auto focus function or auto focus failure</string>
    <string name="camerafront_name"> Front camera </string>
    <string name="camerafront_takepicture">Take photos</string>
    <string name="lcm_name">Display</string>
    <string name="lcm_confirm">Please choose</string>
    <string name="vibrate">motor</string>
    <string name="vibrate_name">shock</string>
    <string name="vibrate_confirm">Please choose</string>
    <string name="vibrate_hint">Vibrate...</string>
    <string name="psensor_name"> Distance sensor </string>
    <string name="psensor_title">Please follow the instructions below, and each step must be completed in 7 seconds.
    </string>
    <string name="psensor_to_cover"> Please cover the distance sensor for more than 2 seconds </string>
    <string name="psensor_to_uncover"> Cancel the coverage sensor for more than 2 seconds </string>
    <string name="psensor_uncovered">Uncovered</string>
    <string name="psensor_covered">cover</string>
    <string name="psensor_verifying">Verification...</string>
    <string name="psensor_sensor_unstable_fail"> Distance sensor instability !</string>
    <string name="gsensor_name">accelerometer</string>
    <string name="msensor_name"> Geomagnetic sensor </string>
    <string name="gyroscope_name">Electronic compass</string>
    <string name="lightsensor_name">Light Sensor</string>
    <string name="psam_name">PSAM</string>
    <string name="simio_name">SIMIO</string>
    <string name="simio_info">SIMIO is being tested. Please wait a moment...</string>
    <string name="sdcard_name">SD card</string>
    <string name="sdcard_title">SD card</string>
    <string name="sdcard_wait">Read the SD card, please wait a minute...</string>
    <string name="sdcard_confirm">The SD card has been inserted?</string>
    <string name="sdcard_to_remove">Please remove the SD card</string>
    <string name="sdcard_to_insert"> Please insert the SD card </string>
    <string name="bluetooth_name">Bluetooth</string>
    <string name="bluetooth_scan_start"> Scanning equipment ...</string>
    <string name="bluetooth_scan_finish"> Scan end </string>
    <string name="bluetooth_turning_on"> Turn on Bluetooth ...</string>
    <string name="bluetooth_scan_null">No equipment was found</string>
    <string name="cost"> Open the cost of Bluetooth </string>
    <string name="wifi_name">WiFi</string>
    <string name="wifi_text"> The WiFi test will be completed in 30 seconds. Please wait a moment. </string>
    <string name="wifi_scan_failed"> Scan failure !</string>
    <string name="wifi_is_closing">WiFi is closing. Please try again later.</string>
    <string name="wifi_scan_null">No wireless network was found!</string>
    <string name="wifi_state_unknown">WiFi state is unknown, please try again.</string>
    <string name="speaker">speaker</string>
    <string name="transmitter_receiver_name">Microphone / receiver</string>
    <string name="transmitter_receiver_mic_main">Master MIC test</string>
    <string name="transmitter_receiver_mic_deputy">Vice MIC test</string>
    <string name="transmitter_receiver_hint">Microphone and receiver</string>
    <string name="transmitter_receiver_recording"> Now start the recording, please speak and click the stop button to stop the recording 
    </string>
    <string name="transmitter_receiver_playing"> In the playback, listen to the receiver .</string>
    <string name="deputy_transmitter_receiver_playing"> In the playback, listen to the speaker .</string>
    <string name="transmitter_receiver_confirm"> Do you hear the sound of the sound? ?</string>
    <string name="transmitter_receiver_record_first">Please click the recording button first</string>
    <string name="transmitter_receiver_replay_end">The recording has arrived at the end.</string>
    <string name="transmitter_receiver_to_record"> Click on the recording button to make a recording .</string>
    <string name="headset_name"> Headset </string>
    <string name="pen_text"> Please plug in the capacitor pen </string>
    <string name="pen_in"> Insert capacitor pen </string>
    <string name="pen_out">Pull out the capacitor pen</string>
    <string name="key_code">key code：</string>
    <string name="keypad_keySCAN">SCAN </string>
    <string name="keypad_keyFn">Fn </string>
    <string name="keypad_keyback">BACK SPACE</string>
    <string name="keypad_keyenter">ENT </string>
    <string name="keypad_Aa">Aa </string>
    <string name="keypad_keytalk">TALK </string>
    <string name="keypad_key1"> 1 </string>
    <string name="keypad_key2"> 2 </string>
    <string name="keypad_key3"> 3 </string>
    <string name="keypad_key4"> 4 </string>
    <string name="keypad_key5"> 5 </string>
    <string name="keypad_key6"> 6 </string>
    <string name="keypad_key7"> 7 </string>
    <string name="keypad_key8"> 8 </string>
    <string name="keypad_key9"> 9 </string>
    <string name="keypad_key0"> 0 </string>
    <string name="keypad_keystar">* </string>
    <string name="keypad_keypound"># </string>
    <string name="keypad_F1">F1 </string>
    <string name="keypad_F2">F2 </string>
    <string name="keypad_F3">F3 </string>
    <string name="keypad_F4">F4 </string>
    <string name="keypad_up">up</string>
    <string name="keypad_down">down</string>
    <string name="keypad_left"> Left</string>
    <string name="keypad_right">right</string>
    <string name="keypad_DOT">. key</string>
    <string name="keypad_keySCAN1">SCAN1 </string>
    <string name="keypad_keySCAN2">SCAN2 </string>
    <string name="keypad_keySCAN3">SCAN3 </string>
    <string name="keypad_keySCAN4">SCAN4 </string>
</resources>