<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2011-2013, Qualcomm Technologies, Inc. All Rights Reserved.
  Qualcomm Technologies Proprietary and Confidential.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
>
    <TextView
        android:id="@+id/pen_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pen_text"
        android:textSize="20dip"
        android:layout_margin="15px" />
    <TextView
        android:id="@+id/pen_out"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/pen_out"
        android:layout_margin="5px"
        android:textSize="20dip" />
    <TextView
        android:id="@+id/pen_in"
        android:text="@string/pen_in"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="5px"
        android:textSize="20dip" />
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="15px"
    >
    <Button
            android:id="@+id/pass"
            android:text="@string/pass"
            android:textSize="20dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
        ></Button>
        <Button
            android:id="@+id/fail"
            android:text="@string/fail"
            android:textSize="20dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
        ></Button>
    </LinearLayout>
</LinearLayout>
